weighted edges still via mixin

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,21 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
    "source": [
+    "@dataclass(frozen=True)\n",
     "class BaseEdge(ABC):\n",
     "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1: Node, node2: Node):\n",
-    "        self._node1 = node1\n",
-    "        self._node2 = node2\n",
+    "    node1: Node\n",
+    "    node2: Node\n",
     "\n",
     "    @property\n",
     "    def nodes(self) -> Tuple[Node, Node]:\n",
-    "        return self._node1, self._node2\n",
+    "        return self.node1, self.node2\n",
     "\n",
     "    @property\n",
     "    @abstractmethod\n",
@@ -102,75 +102,51 @@
     "        node1, node2 = self.nodes\n",
     "        return f\"{node1} {self._separator} {node2}\"\n",
     "\n",
-    "    @abstractmethod\n",
-    "    def __eq__(self, other) -> bool:\n",
-    "        pass\n",
     "\n",
-    "    @abstractmethod\n",
-    "    def __hash__(self) -> int:\n",
-    "        pass\n",
-    "\n",
-    "\n",
+    "@dataclass(frozen=True)\n",
     "class Edge(BaseEdge):\n",
     "    \"\"\"Bidirectional unweighted graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1: Node, node2: Node):\n",
-    "        BaseEdge.__init__(self, node1, node2)\n",
+    "    def __post_init__(self):\n",
+    "        # Canonical ordering\n",
+    "        if self.node1.name > self.node2.name:\n",
+    "            node1 = self.node1\n",
+    "            object.__setattr__(self, \"node1\", self.node2)\n",
+    "            object.__setattr__(self, \"node2\", node1)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
     "        return \"<---->\"\n",
     "\n",
-    "    def __eq__(self, other) -> bool:\n",
-    "        if not isinstance(other, Edge):\n",
-    "            return False\n",
-    "        return {*self.nodes} == {*other.nodes}\n",
     "\n",
-    "    def __hash__(self) -> int:\n",
-    "        return hash(frozenset(self.nodes))\n",
-    "\n",
-    "\n",
+    "@dataclass(frozen=True)\n",
     "class DirectedEdge(BaseEdge):\n",
     "    \"\"\"Unidirectional unweighted graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node):\n",
+    "        # need to change the signature of the contructor\n",
     "        # maintains the invariant that src=node1 and dest=node2\n",
     "        BaseEdge.__init__(self, src, dest)\n",
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
-    "        return self._node1\n",
+    "        return self.node1\n",
     "\n",
     "    @property\n",
     "    def dest(self) -> Node:\n",
-    "        return self._node2\n",
+    "        return self.node2\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
     "        return \">---->\"\n",
     "\n",
-    "    def __eq__(self, other) -> bool:\n",
-    "        if not isinstance(other, DirectedEdge):\n",
-    "            return False\n",
-    "        sources_equal = self.src == other.src\n",
-    "        destinations_equal = self.dest == other.dest\n",
-    "        return sources_equal and destinations_equal\n",
     "\n",
-    "    def __hash__(self) -> int:\n",
-    "        return hash(self.nodes)\n",
-    "\n",
-    "\n",
+    "@dataclass(frozen=True)\n",
     "class WeightedEdgeMixin:\n",
-    "    \"\"\"Mixin adding the ability for edges to have weights.\"\"\"\n",
-    "\n",
-    "    def __init__(self, weight: int | float):\n",
-    "        self._weight = weight\n",
-    "\n",
-    "    @property\n",
-    "    def weight(self) -> int | float:\n",
-    "        return self._weight\n",
+    "    weight: int | float\n",
     "\n",
     "\n",
+    "@dataclass(frozen=True)\n",
     "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
     "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
     "\n",
@@ -182,16 +158,8 @@
     "    def _separator(self) -> str:\n",
     "        return f\"<--({self.weight})-->\"\n",
     "\n",
-    "    def __eq__(self, other) -> bool:\n",
-    "        if not isinstance(other, WeightedEdge):\n",
-    "            return False\n",
-    "        weights_equal = self.weight == other.weight\n",
-    "        return Edge.__eq__(self, other) and weights_equal\n",
     "\n",
-    "    def __hash__(self) -> int:\n",
-    "        return hash((frozenset(self.nodes), self.weight))\n",
-    "\n",
-    "\n",
+    "@dataclass(frozen=True)\n",
     "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
     "\n",
@@ -201,23 +169,12 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        return f\">--({self.weight})-->\"\n",
-    "\n",
-    "    def __eq__(self, other) -> bool:\n",
-    "        if not isinstance(other, WeightedDirectedEdge):\n",
-    "            return False\n",
-    "        sources_equal = self.src == other.src\n",
-    "        destinations_equal = self.dest == other.dest\n",
-    "        weights_equal = self.weight == other.weight\n",
-    "        return sources_equal and destinations_equal and weights_equal\n",
-    "\n",
-    "    def __hash__(self) -> int:\n",
-    "        return hash((self.nodes, self.weight))"
+    "        return f\">--({self.weight})-->\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [
@@ -239,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "4d6f872e",
    "metadata": {},
    "outputs": [],
@@ -252,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "32858237",
    "metadata": {},
    "outputs": [],
@@ -265,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "35db1597",
    "metadata": {},
    "outputs": [],
@@ -276,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -284,8 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 <----> 2 equals 2 <----> 1 is True\n",
-      "1 <--(3.14)--> 2 equals 2 <--(3.14)--> 1 is True\n",
+      "1 <----> 2 equals 1 <----> 2 is True\n",
+      "1 <--(3.14)--> 2 equals 1 <--(3.14)--> 2 is True\n",
       "1 >----> 2 equals 2 >----> 1 is False\n",
       "1 >--(3.14)--> 2 equals 2 >--(3.14)--> 1 is False\n",
       "1 <--(3.14)--> 2 equals 1 <--(3)--> 2 is False\n",
@@ -306,38 +263,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{<__main__.Edge at 0x2ded0bd9e80>}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "{Edge(node1=Node(name='1'), node2=Node(name='2'))}\n"
+     ]
     }
    ],
    "source": [
-    "{edge12, edge21}  # exactly what we wanted because they are the same edge!"
+    "print(edge12 is edge21)\n",
+    "print({edge12, edge21})  # exactly what we wanted because they are the same edge!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "cf0a6dbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.WeightedEdge at 0x2ded0bda3c0>}"
+       "{WeightedEdge(weight=3.14, node1=Node(name='1'), node2=Node(name='2'))}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,17 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x2ded0bade50>, <__main__.C at 0x2ded0bd86e0>}"
+       "{<__main__.C at 0x1c43d65e5d0>, <__main__.C at 0x1c43d689d30>}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f3dedd0",
+   "id": "9a341826",
    "metadata": {},
    "outputs": [],
    "source": []
