weights defined via more dataclass fields

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -142,17 +142,10 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class WeightedEdgeMixin:\n",
-    "    weight: int | float\n",
-    "\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
+    "class WeightedEdge(Edge):\n",
     "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
-    "        Edge.__init__(self, node1, node2)\n",
-    "        WeightedEdgeMixin.__init__(self, weight)\n",
+    "    weight: int | float\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -160,12 +153,10 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
+    "class WeightedDirectedEdge(DirectedEdge):\n",
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
-    "        DirectedEdge.__init__(self, src, dest)\n",
-    "        WeightedEdgeMixin.__init__(self, weight)\n",
+    "    weight: int | float\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -187,7 +178,7 @@
     }
    ],
    "source": [
-    "# BaseEdge()\n",
+    "# BaseEdge()  # TypeError: Can't instantiate abstract class BaseEdge without an implementation for abstract method '_separator'\n",
     "node1 = Node(\"1\")\n",
     "node2 = Node(\"2\")\n",
     "\n",
@@ -290,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "{WeightedEdge(weight=3.14, node1=Node(name='1'), node2=Node(name='2'))}"
+       "{WeightedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}"
       ]
      },
      "execution_count": 10,
@@ -311,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x1c43d65e5d0>, <__main__.C at 0x1c43d689d30>}"
+       "{<__main__.C at 0x2af26b3e710>, <__main__.C at 0x2af26b69be0>}"
       ]
      },
      "execution_count": 11,
