--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        return \">---->\"\n",
+    "        return \"----->\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
@@ -160,7 +160,7 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        return f\">--({self.weight})-->\""
+    "        return f\"---({self.weight})-->\""
    ]
   },
   {
@@ -234,10 +234,10 @@
      "text": [
       "1 <----> 2 equals 1 <----> 2 is True\n",
       "1 <--(3.14)--> 2 equals 1 <--(3.14)--> 2 is True\n",
-      "1 >----> 2 equals 2 >----> 1 is False\n",
-      "1 >--(3.14)--> 2 equals 2 >--(3.14)--> 1 is False\n",
+      "1 -----> 2 equals 2 -----> 1 is False\n",
+      "1 ---(3.14)--> 2 equals 2 ---(3.14)--> 1 is False\n",
       "1 <--(3.14)--> 2 equals 1 <--(3)--> 2 is False\n",
-      "1 >--(3.14)--> 2 equals 1 >--(3)--> 2 is False\n"
+      "1 ---(3.14)--> 2 equals 1 ---(3)--> 2 is False\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x2af26b3e710>, <__main__.C at 0x2af26b69be0>}"
+       "{<__main__.C at 0x1651d94e710>, <__main__.C at 0x1651d979be0>}"
       ]
      },
      "execution_count": 11,
