Improved signatures, hidden _node1,2

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -86,12 +86,12 @@
     "class BaseEdge(ABC):\n",
     "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
     "\n",
-    "    node1: Node\n",
-    "    node2: Node\n",
+    "    _node1: Node\n",
+    "    _node2: Node\n",
     "\n",
     "    @property\n",
     "    def nodes(self) -> Tuple[Node, Node]:\n",
-    "        return self.node1, self.node2\n",
+    "        return self._node1, self._node2\n",
     "\n",
     "    @property\n",
     "    @abstractmethod\n",
@@ -107,12 +107,14 @@
     "class Edge(BaseEdge):\n",
     "    \"\"\"Bidirectional unweighted graph edge.\"\"\"\n",
     "\n",
-    "    def __post_init__(self):\n",
-    "        # Canonical ordering\n",
-    "        if self.node1.name > self.node2.name:\n",
-    "            node1 = self.node1\n",
-    "            object.__setattr__(self, \"node1\", self.node2)\n",
-    "            object.__setattr__(self, \"node2\", node1)\n",
+    "    def __init__(self, node1: Node, node2: Node):\n",
+    "        # Improves signature of the constructor\n",
+    "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
+    "        # to work correctly and for better str representation\n",
+    "        if node1.name > node2.name:\n",
+    "            BaseEdge.__init__(self, node2, node1)\n",
+    "        else:\n",
+    "            BaseEdge.__init__(self, node1, node2)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -124,17 +126,17 @@
     "    \"\"\"Unidirectional unweighted graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node):\n",
-    "        # need to change the signature of the contructor\n",
-    "        # maintains the invariant that src=node1 and dest=node2\n",
+    "        # Improves signature of the constructor\n",
+    "        # Invariant: src=node1 and dest=node2\n",
     "        BaseEdge.__init__(self, src, dest)\n",
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
-    "        return self.node1\n",
+    "        return self._node1\n",
     "\n",
     "    @property\n",
     "    def dest(self) -> Node:\n",
-    "        return self.node2\n",
+    "        return self._node2\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -147,6 +149,10 @@
     "\n",
     "    weight: int | float\n",
     "\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
+    "        Edge.__init__(self, node1, node2)\n",
+    "        object.__setattr__(self, \"weight\", weight)\n",
+    "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
     "        return f\"<--({self.weight})-->\"\n",
@@ -157,6 +163,10 @@
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
     "\n",
     "    weight: int | float\n",
+    "\n",
+    "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
+    "        DirectedEdge.__init__(self, src, dest)\n",
+    "        object.__setattr__(self, \"weight\", weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -263,7 +273,7 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "{Edge(node1=Node(name='1'), node2=Node(name='2'))}\n"
+      "{Edge(_node1=Node(name='1'), _node2=Node(name='2'))}\n"
      ]
     }
    ],
@@ -281,7 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "{WeightedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}"
+       "{WeightedEdge(_node1=Node(name='1'), _node2=Node(name='2'), weight=3.14)}"
       ]
      },
      "execution_count": 10,
@@ -302,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x1651d94e710>, <__main__.C at 0x1651d979be0>}"
+       "{<__main__.C at 0x25c9c19e490>, <__main__.C at 0x25c9c1c9be0>}"
       ]
      },
      "execution_count": 11,
@@ -324,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a341826",
+   "id": "cdb56b65",
    "metadata": {},
    "outputs": [],
    "source": []
