--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -144,14 +144,17 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class WeightedEdge(Edge):\n",
-    "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
-    "\n",
+    "class WeightedEdgeMixin:\n",
     "    weight: int | float\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
+    "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
     "        Edge.__init__(self, node1, node2)\n",
-    "        object.__setattr__(self, \"weight\", weight)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -159,14 +162,12 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class WeightedDirectedEdge(DirectedEdge):\n",
+    "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
-    "\n",
-    "    weight: int | float\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
     "        DirectedEdge.__init__(self, src, dest)\n",
-    "        object.__setattr__(self, \"weight\", weight)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4d6f872e",
    "metadata": {},
    "outputs": [],
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "32858237",
    "metadata": {},
    "outputs": [],
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "35db1597",
    "metadata": {},
    "outputs": [],
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -284,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "cf0a6dbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{WeightedEdge(_node1=Node(name='1'), _node2=Node(name='2'), weight=3.14)}"
+       "{WeightedEdge(weight=3.14, _node1=Node(name='1'), _node2=Node(name='2'))}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x25c9c19e490>, <__main__.C at 0x25c9c1c9be0>}"
+       "{<__main__.C at 0x20e2adce710>, <__main__.C at 0x20e2adfaf90>}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb56b65",
+   "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
    "source": []
