Reverting back to version with mixins
This reverts commit 900c8c4e56308a11e73821077fc403b157c32e94.

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -86,12 +86,12 @@
     "class BaseEdge(ABC):\n",
     "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
     "\n",
-    "    node1: Node\n",
-    "    node2: Node\n",
+    "    _node1: Node\n",
+    "    _node2: Node\n",
     "\n",
     "    @property\n",
     "    def nodes(self) -> Tuple[Node, Node]:\n",
-    "        return self.node1, self.node2\n",
+    "        return self._node1, self._node2\n",
     "\n",
     "    @property\n",
     "    @abstractmethod\n",
@@ -107,13 +107,14 @@
     "class Edge(BaseEdge):\n",
     "    \"\"\"Bidirectional unweighted graph edge.\"\"\"\n",
     "\n",
-    "    def __post_init__(self):\n",
+    "    def __init__(self, node1: Node, node2: Node):\n",
+    "        # Improves signature of the constructor\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
     "        # to work correctly and for better str representation\n",
-    "        if self.node1.name > self.node2.name:\n",
-    "            node1 = self.node1\n",
-    "            object.__setattr__(self, \"node1\", self.node2)\n",
-    "            object.__setattr__(self, \"node2\", node1)\n",
+    "        if node1.name > node2.name:\n",
+    "            BaseEdge.__init__(self, node2, node1)\n",
+    "        else:\n",
+    "            BaseEdge.__init__(self, node1, node2)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -131,11 +132,11 @@
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
-    "        return self.node1\n",
+    "        return self._node1\n",
     "\n",
     "    @property\n",
     "    def dest(self) -> Node:\n",
-    "        return self.node2\n",
+    "        return self._node2\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -148,10 +149,12 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "# Mixins must be on surprisingly the left to perserve the \"usual\"\n",
-    "# field order because dataclasses add fields in *reverse* MRO order\n",
-    "class WeightedEdge(WeightedEdgeMixin, Edge):\n",
+    "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
     "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
+    "        Edge.__init__(self, node1, node2)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -159,8 +162,12 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class WeightedDirectedEdge(WeightedEdgeMixin, DirectedEdge):\n",
+    "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
+    "        DirectedEdge.__init__(self, src, dest)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [
@@ -191,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4d6f872e",
    "metadata": {},
    "outputs": [],
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "32858237",
    "metadata": {},
    "outputs": [],
@@ -217,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "35db1597",
    "metadata": {},
    "outputs": [],
@@ -228,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -267,7 +274,7 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "{Edge(node1=Node(name='1'), node2=Node(name='2'))}\n"
+      "{Edge(_node1=Node(name='1'), _node2=Node(name='2'))}\n"
      ]
     }
    ],
@@ -278,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "cf0a6dbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{WeightedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}"
+       "{WeightedEdge(weight=3.14, _node1=Node(name='1'), _node2=Node(name='2'))}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x25c939ce710>, <__main__.C at 0x25c939fdd30>}"
+       "{<__main__.C at 0x20e2adce710>, <__main__.C at 0x20e2adfaf90>}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572a28ea",
+   "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
    "source": []
