--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -175,67 +175,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c35a6944",
+   "metadata": {},
+   "source": [
+    "### Testing of Nodes and Edges"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ea3c0db4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# BaseEdge()  # TypeError: Can't instantiate abstract class BaseEdge without an implementation for abstract method '_separator'\n",
     "node1 = Node(\"1\")\n",
     "node2 = Node(\"2\")\n",
     "\n",
-    "print(node1 == node2)"
+    "# BaseEdge()  # TypeError: Can't instantiate abstract class BaseEdge without an implementation for abstract method '_separator'\n",
+    "\n",
+    "e12 = Edge(node1, node2)\n",
+    "we12_314 = WeightedEdge(node1, node2, 3.14)\n",
+    "dir12 = DirectedEdge(node1, node2)\n",
+    "wdir12_314 = WeightedDirectedEdge(node1, node2, 3.14)\n",
+    "\n",
+    "e21 = Edge(node2, node1)\n",
+    "we21_314 = WeightedEdge(node2, node1, 3.14)\n",
+    "dir21 = DirectedEdge(node2, node1)\n",
+    "wdir21_314 = WeightedDirectedEdge(node2, node1, 3.14)\n",
+    "\n",
+    "we12_3 = WeightedEdge(node1, node2, 3)\n",
+    "wdir12_3 = WeightedDirectedEdge(node1, node2, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4d6f872e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edge12 = Edge(node1, node2)\n",
-    "w_edge12_314 = WeightedEdge(node1, node2, 3.14)\n",
-    "dir_edge12 = DirectedEdge(node1, node2)\n",
-    "wdir_edge12_314 = WeightedDirectedEdge(node1, node2, 3.14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "32858237",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edge21 = Edge(node2, node1)\n",
-    "w_edge21_314 = WeightedEdge(node2, node1, 3.14)\n",
-    "dir_edge21 = DirectedEdge(node2, node1)\n",
-    "wdir_edge21_314 = WeightedDirectedEdge(node2, node1, 3.14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "35db1597",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w_edge12_3 = WeightedEdge(node1, node2, 3)\n",
-    "wdir_edge12_3 = WeightedDirectedEdge(node1, node2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -253,19 +228,17 @@
     }
    ],
    "source": [
-    "print(f\"{edge12} equals {edge21} is {edge12 == edge21}\")\n",
-    "print(f\"{w_edge12_314} equals {w_edge21_314} is {w_edge12_314 == w_edge21_314}\")\n",
-    "print(f\"{dir_edge12} equals {dir_edge21} is {dir_edge12 == dir_edge21}\")\n",
-    "print(\n",
-    "    f\"{wdir_edge12_314} equals {wdir_edge21_314} is {wdir_edge12_314 == wdir_edge21_314}\"\n",
-    ")\n",
-    "print(f\"{w_edge12_314} equals {w_edge12_3} is {w_edge12_314 == w_edge12_3}\")\n",
-    "print(f\"{wdir_edge12_314} equals {wdir_edge12_3} is {wdir_edge12_314 == wdir_edge12_3}\")"
+    "print(f\"{e12} equals {e21} is {e12 == e21}\")\n",
+    "print(f\"{we12_314} equals {we21_314} is {we12_314 == we21_314}\")\n",
+    "print(f\"{dir12} equals {dir21} is {dir12 == dir21}\")\n",
+    "print(f\"{wdir12_314} equals {wdir21_314} is {wdir12_314 == wdir21_314}\")\n",
+    "print(f\"{we12_314} equals {we12_3} is {we12_314 == we12_3}\")\n",
+    "print(f\"{wdir12_314} equals {wdir12_3} is {wdir12_314 == wdir12_3}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -273,50 +246,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "{Edge(_node1=Node(name='1'), _node2=Node(name='2'))}\n"
+      "{Edge(_node1=Node(name='1'), _node2=Node(name='2'))}\n",
+      "{WeightedEdge(weight=3.14, _node1=Node(name='1'), _node2=Node(name='2'))}\n",
+      "{Node(name='2'), Node(name='1')}\n"
      ]
     }
    ],
    "source": [
-    "print(edge12 is edge21)\n",
-    "print({edge12, edge21})  # exactly what we wanted because they are the same edge!"
+    "print({e12, e21})  # exactly what we wanted because they are the same edge!\n",
+    "print({we12_314, we21_314})\n",
+    "print({node1, Node(\"1\"), node2})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "cf0a6dbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{WeightedEdge(weight=3.14, _node1=Node(name='1'), _node2=Node(name='2'))}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{w_edge12_314, w_edge21_314}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x20e2adce710>, <__main__.C at 0x20e2adfaf90>}"
+       "{<__main__.C at 0x1fdab7befd0>, <__main__.C at 0x1fdab7eea50>}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,10 +280,7 @@
     "    pass\n",
     "\n",
     "\n",
-    "c1 = C()\n",
-    "c2 = C()\n",
-    "\n",
-    "{c1, c2}"
+    "{C(), C()}"
    ]
   },
   {
