--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -86,12 +86,12 @@
     "class BaseEdge(ABC):\n",
     "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
     "\n",
-    "    _node1: Node\n",
-    "    _node2: Node\n",
+    "    node1: Node\n",
+    "    node2: Node\n",
     "\n",
     "    @property\n",
     "    def nodes(self) -> Tuple[Node, Node]:\n",
-    "        return self._node1, self._node2\n",
+    "        return self.node1, self.node2\n",
     "\n",
     "    @property\n",
     "    @abstractmethod\n",
@@ -132,11 +132,11 @@
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
-    "        return self._node1\n",
+    "        return self.nodes[0]\n",
     "\n",
     "    @property\n",
     "    def dest(self) -> Node:\n",
-    "        return self._node2\n",
+    "        return self.nodes[1]\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
@@ -153,6 +153,7 @@
     "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
+    "        # Calls Edge.__init__ for canonical ordering\n",
     "        Edge.__init__(self, node1, node2)\n",
     "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
@@ -166,6 +167,7 @@
     "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
+    "        # Improves signature of the constructor\n",
     "        DirectedEdge.__init__(self, src, dest)\n",
     "        WeightedEdgeMixin.__init__(self, weight)\n",
     "\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -218,27 +220,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 <----> 2 equals 1 <----> 2 is True\n",
-      "1 <--(3.14)--> 2 equals 1 <--(3.14)--> 2 is True\n",
-      "1 -----> 2 equals 2 -----> 1 is False\n",
-      "1 ---(3.14)--> 2 equals 2 ---(3.14)--> 1 is False\n",
-      "1 <--(3.14)--> 2 equals 1 <--(3)--> 2 is False\n",
-      "1 ---(3.14)--> 2 equals 1 ---(3)--> 2 is False\n"
+      "True: 1 <----> 2 equals 1 <----> 2\n",
+      "True: 1 <--(3.14)--> 2 equals 1 <--(3.14)--> 2\n",
+      "False: 1 -----> 2 equals 2 -----> 1\n",
+      "False: 1 ---(3.14)--> 2 equals 2 ---(3.14)--> 1\n",
+      "False: 1 <--(3.14)--> 2 equals 1 <--(3)--> 2\n",
+      "False: 1 ---(3.14)--> 2 equals 1 ---(3)--> 2\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{e12} equals {e21} is {e12 == e21}\")\n",
-    "print(f\"{we12_314} equals {we21_314} is {we12_314 == we21_314}\")\n",
-    "print(f\"{dir12} equals {dir21} is {dir12 == dir21}\")\n",
-    "print(f\"{wdir12_314} equals {wdir21_314} is {wdir12_314 == wdir21_314}\")\n",
-    "print(f\"{we12_314} equals {we12_3} is {we12_314 == we12_3}\")\n",
-    "print(f\"{wdir12_314} equals {wdir12_3} is {wdir12_314 == wdir12_3}\")"
+    "print(f\"{e12 == e21}: {e12} equals {e21}\")\n",
+    "print(f\"{we12_314 == we21_314}: {we12_314} equals {we21_314}\")\n",
+    "print(f\"{dir12 == dir21}: {dir12} equals {dir21}\")\n",
+    "print(f\"{wdir12_314 == wdir21_314}: {wdir12_314} equals {wdir21_314}\")\n",
+    "print(f\"{we12_314 == we12_3}: {we12_314} equals {we12_3}\")\n",
+    "print(f\"{wdir12_314 == wdir12_3}: {wdir12_314} equals {wdir12_3}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -246,9 +248,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{Edge(_node1=Node(name='1'), _node2=Node(name='2'))}\n",
-      "{WeightedEdge(weight=3.14, _node1=Node(name='1'), _node2=Node(name='2'))}\n",
-      "{Node(name='2'), Node(name='1')}\n"
+      "{Edge(node1=Node(name='1'), node2=Node(name='2'))}\n",
+      "{WeightedEdge(weight=3.14, node1=Node(name='1'), node2=Node(name='2'))}\n",
+      "{Node(name='1'), Node(name='2')}\n"
      ]
     }
    ],
@@ -260,17 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x1fdab7befd0>, <__main__.C at 0x1fdab7eea50>}"
+       "{<__main__.C at 0x26e96fde490>, <__main__.C at 0x26e97008ec0>}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
