Weighted edge now not class but attribute

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -88,6 +88,11 @@
     "\n",
     "    node1: Node\n",
     "    node2: Node\n",
+    "    weight: int | float | None = None\n",
+    "\n",
+    "    @property\n",
+    "    def weighted(self) -> bool:\n",
+    "        return self.weight is not None\n",
     "\n",
     "    @property\n",
     "    def nodes(self) -> Tuple[Node, Node]:\n",
@@ -105,30 +110,32 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class Edge(BaseEdge):\n",
-    "    \"\"\"Bidirectional unweighted graph edge.\"\"\"\n",
+    "    \"\"\"Bidirectional graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1: Node, node2: Node):\n",
-    "        # Improves signature of the constructor\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float | None = None):\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
     "        # to work correctly and for better str representation\n",
     "        if node1.name > node2.name:\n",
-    "            BaseEdge.__init__(self, node2, node1)\n",
+    "            BaseEdge.__init__(self, node2, node1, weight)\n",
     "        else:\n",
-    "            BaseEdge.__init__(self, node1, node2)\n",
+    "            BaseEdge.__init__(self, node1, node2, weight)\n",
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        return \"<---->\"\n",
+    "        if self.weighted:\n",
+    "            return f\"<--({self.weight})-->\"\n",
+    "        else:\n",
+    "            return \"<---->\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class DirectedEdge(BaseEdge):\n",
-    "    \"\"\"Unidirectional unweighted graph edge.\"\"\"\n",
+    "    \"\"\"Unidirectional graph edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, src: Node, dest: Node):\n",
+    "    def __init__(self, src: Node, dest: Node, weight: int | float | None = None):\n",
     "        # Improves signature of the constructor\n",
     "        # Invariant: src=node1 and dest=node2\n",
-    "        BaseEdge.__init__(self, src, dest)\n",
+    "        BaseEdge.__init__(self, src, dest, weight)\n",
     "\n",
     "    @property\n",
     "    def src(self) -> Node:\n",
@@ -140,40 +147,10 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        return \"----->\"\n",
-    "\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class WeightedEdgeMixin:\n",
-    "    weight: int | float\n",
-    "\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
-    "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
-    "\n",
-    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
-    "        # Calls Edge.__init__ for canonical ordering\n",
-    "        Edge.__init__(self, node1, node2)\n",
-    "        WeightedEdgeMixin.__init__(self, weight)\n",
-    "\n",
-    "    @property\n",
-    "    def _separator(self) -> str:\n",
-    "        return f\"<--({self.weight})-->\"\n",
-    "\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
-    "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
-    "\n",
-    "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
-    "        # Improves signature of the constructor\n",
-    "        DirectedEdge.__init__(self, src, dest)\n",
-    "        WeightedEdgeMixin.__init__(self, weight)\n",
-    "\n",
-    "    @property\n",
-    "    def _separator(self) -> str:\n",
-    "        return f\"---({self.weight})-->\""
+    "        if self.weighted:\n",
+    "            return f\"---({self.weight})-->\"\n",
+    "        else:\n",
+    "            return \"----->\""
    ]
   },
   {
@@ -186,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -197,22 +174,22 @@
     "# BaseEdge()  # TypeError: Can't instantiate abstract class BaseEdge without an implementation for abstract method '_separator'\n",
     "\n",
     "e12 = Edge(node1, node2)\n",
-    "we12_314 = WeightedEdge(node1, node2, 3.14)\n",
+    "we12_314 = Edge(node1, node2, 3.14)\n",
     "dir12 = DirectedEdge(node1, node2)\n",
-    "wdir12_314 = WeightedDirectedEdge(node1, node2, 3.14)\n",
+    "wdir12_314 = DirectedEdge(node1, node2, 3.14)\n",
     "\n",
     "e21 = Edge(node2, node1)\n",
-    "we21_314 = WeightedEdge(node2, node1, 3.14)\n",
+    "we21_314 = Edge(node2, node1, 3.14)\n",
     "dir21 = DirectedEdge(node2, node1)\n",
-    "wdir21_314 = WeightedDirectedEdge(node2, node1, 3.14)\n",
+    "wdir21_314 = DirectedEdge(node2, node1, 3.14)\n",
     "\n",
-    "we12_3 = WeightedEdge(node1, node2, 3)\n",
-    "wdir12_3 = WeightedDirectedEdge(node1, node2, 3)"
+    "we12_3 = Edge(node1, node2, 3)\n",
+    "wdir12_3 = DirectedEdge(node1, node2, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -240,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -248,9 +225,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{Edge(node1=Node(name='1'), node2=Node(name='2'))}\n",
-      "{WeightedEdge(weight=3.14, node1=Node(name='1'), node2=Node(name='2'))}\n",
-      "{Node(name='1'), Node(name='2')}\n"
+      "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=None)}\n",
+      "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
+      "{Node(name='2'), Node(name='1')}\n"
      ]
     }
    ],
@@ -262,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "682a8f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x26e96fde490>, <__main__.C at 0x26e97008ec0>}"
+       "{<__main__.C at 0x2bc7844ad50>, <__main__.C at 0x2bc78758830>}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
