Digraph up to add_directed_edge

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -268,7 +268,66 @@
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Digraph:\n",
+    "    \"\"\"Directed graph.\"\"\"\n",
+    "\n",
+    "    # nodes is a list of the nodes in the graph.\n",
+    "    # edges is a dict mapping each node to a list of its children.\n",
+    "    # Implementation of these children depends on weighted: if True, children\n",
+    "    # implemented as tuples, where the first element is the child node\n",
+    "    # and the second element is the weight of the edge. When False, the only\n",
+    "    # element is the node. The first added edge determines the Digraph\n",
+    "    # for the rest of its life.\n",
+    "    # Internally, an \"edge\" is one-way only.\n",
+    "    # Bidirectional edges treated as having an \"edge\" in both directions.\n",
+    "\n",
+    "    def __init__(self, weighted=None):\n",
+    "        self._nodes = []\n",
+    "        self._edges = {}\n",
+    "        self.weighted = weighted\n",
+    "\n",
+    "    def add_node(self, node):\n",
+    "        if self.has_node(node):\n",
+    "            raise ValueError(\"Duplicate node\")\n",
+    "        else:\n",
+    "            self._nodes.append(node)\n",
+    "            self._edges[node] = []\n",
+    "\n",
+    "    def _check_weighted(self, edge):\n",
+    "        if edge.weighted and not self.weighted:\n",
+    "            raise ValueError(\"This graph is unweighted, cannot add weighted edge\")\n",
+    "        if self.weighted and not edge.weighted:\n",
+    "            raise ValueError(\"This graph is weighted, cannot add unweighted edge\")\n",
+    "\n",
+    "    def add_directed_edge(self, edge):\n",
+    "        nodes = edge.nodes\n",
+    "        if not (self.has_node(nodes[0]) and self.has_node(nodes[1])):\n",
+    "            raise ValueError(\"Node not in graph\")\n",
+    "\n",
+    "        if self.weighted is not None:\n",
+    "            self._check_weighted(edge)\n",
+    "        else:\n",
+    "            self.weighted = edge.weighted\n",
+    "\n",
+    "        if self.weighted:\n",
+    "            self._edges[edge.src].append((edge.dest, edge.weight))\n",
+    "        else:\n",
+    "            self._edges[edge.src].append(edge.dest)\n",
+    "\n",
+    "    def add_undirected_edge(self, edge):\n",
+    "        \"\"\"Treated as two directed edges.\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    def children_of(self, node):\n",
+    "        pass\n",
+    "\n",
+    "    def has_node(self, node):\n",
+    "        pass\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"\""
+   ]
   }
  ],
  "metadata": {
