--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,12 @@
     "\n",
     "    def __str__(self) -> str:\n",
     "        node1, node2 = self.nodes\n",
-    "        return f\"{node1} {self._separator} {node2}\"\n",
+    "        sep = self._separator\n",
+    "        half = len(sep) // 2\n",
+    "        if self.weighted:\n",
+    "            return f\"{node1} {sep[:half]}({self.weight}){sep[half:]} {node2}\"\n",
+    "        else:\n",
+    "            return f\"{node1} {self._separator} {node2}\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
@@ -114,7 +119,7 @@
     "\n",
     "    def __init__(self, node1: Node, node2: Node, weight: int | float | None = None):\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
-    "        # to work correctly and for better str representation\n",
+    "        # to work correctly and for better (consistent) str representation\n",
     "        if node1.name > node2.name:\n",
     "            BaseEdge.__init__(self, node2, node1, weight)\n",
     "        else:\n",
@@ -122,10 +127,7 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        if self.weighted:\n",
-    "            return f\"<--({self.weight})-->\"\n",
-    "        else:\n",
-    "            return \"<---->\"\n",
+    "        return \"<---->\"\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
@@ -147,10 +149,7 @@
     "\n",
     "    @property\n",
     "    def _separator(self) -> str:\n",
-    "        if self.weighted:\n",
-    "            return f\"---({self.weight})-->\"\n",
-    "        else:\n",
-    "            return \"----->\""
+    "        return \"----->\""
    ]
   },
   {
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [],
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -229,42 +228,28 @@
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
       "{Node(name='2'), Node(name='1')}\n"
      ]
-    }
-   ],
-   "source": [
-    "print({e12, e21})  # exactly what we wanted because they are the same edge!\n",
-    "print({we12_314, we21_314})\n",
-    "print({node1, Node(\"1\"), node2})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "682a8f06",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "{<__main__.C at 0x2bc7844ad50>, <__main__.C at 0x2bc78758830>}"
+       "DirectedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class C:\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "{C(), C()}"
+    "print({e12, e21})  # exactly what we wanted because they are the same edge!\n",
+    "print({we12_314, we21_314})\n",
+    "print({node1, Node(\"1\"), node2})\n",
+    "DirectedEdge(node1, node2)  # unfortunately the improved signature not part of repr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67b4a4ee",
    "metadata": {},
    "outputs": [],
