--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -84,11 +84,16 @@
    "source": [
     "@dataclass(frozen=True)\n",
     "class BaseEdge(ABC):\n",
-    "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
+    "    \"\"\"Abstract base class for immutable graph edge.\"\"\"\n",
     "\n",
     "    node1: Node\n",
     "    node2: Node\n",
     "    weight: int | float | None = None\n",
+    "\n",
+    "    def __post_init__(self):\n",
+    "        # (if weighted, then weight not None)\n",
+    "        if self.weighted and self.weight < 0:  # type: ignore\n",
+    "            raise ValueError(\"Weight cannot be negative\")\n",
     "\n",
     "    @property\n",
     "    def weighted(self) -> bool:\n",
@@ -115,7 +120,7 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class Edge(BaseEdge):\n",
-    "    \"\"\"Bidirectional graph edge.\"\"\"\n",
+    "    \"\"\"Bidirectional immutable graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, node1: Node, node2: Node, weight: int | float | None = None):\n",
     "        # Canonical ordering for dataclass's __eq__ and __hash__\n",
@@ -132,7 +137,7 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class DirectedEdge(BaseEdge):\n",
-    "    \"\"\"Unidirectional graph edge.\"\"\"\n",
+    "    \"\"\"Unidirectional immutable graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node, weight: int | float | None = None):\n",
     "        # Improves signature of the constructor\n",
@@ -216,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "eca858a8",
    "metadata": {},
    "outputs": [
@@ -226,7 +231,7 @@
      "text": [
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=None)}\n",
       "{Edge(node1=Node(name='1'), node2=Node(name='2'), weight=3.14)}\n",
-      "{Node(name='2'), Node(name='1')}\n"
+      "{Node(name='1'), Node(name='2')}\n"
      ]
     },
     {
@@ -235,7 +240,7 @@
        "DirectedEdge(node1=Node(name='1'), node2=Node(name='2'), weight=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +250,27 @@
     "print({we12_314, we21_314})\n",
     "print({node1, Node(\"1\"), node2})\n",
     "DirectedEdge(node1, node2)  # unfortunately the improved signature not part of repr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "979e429e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    edge_neg = Edge(node1, node2, -3.14)\n",
+    "except ValueError:\n",
+    "    print(\"test passed\")"
    ]
   },
   {
