Digraph all except __str__

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -305,6 +305,12 @@
     "            self._nodes.append(node)\n",
     "            self._edges[node] = []\n",
     "\n",
+    "    def _insert_edge(self, src, dest, weight):\n",
+    "        if self.weighted:\n",
+    "            self._edges[src].append((dest, weight))\n",
+    "        else:\n",
+    "            self._edges[src].append(dest)\n",
+    "\n",
     "    def _check_weighted(self, edge):\n",
     "        if edge.weighted and not self.weighted:\n",
     "            raise ValueError(\"This graph is unweighted, cannot add weighted edge\")\n",
@@ -312,32 +318,46 @@
     "            raise ValueError(\"This graph is weighted, cannot add unweighted edge\")\n",
     "\n",
     "    def add_directed_edge(self, edge):\n",
-    "        nodes = edge.nodes\n",
-    "        if not (self.has_node(nodes[0]) and self.has_node(nodes[1])):\n",
-    "            raise ValueError(\"Node not in graph\")\n",
+    "        node1, node2 = edge.nodes\n",
+    "        self._check_node(node1)\n",
+    "        self._check_node(node2)\n",
     "\n",
     "        if self.weighted is not None:\n",
     "            self._check_weighted(edge)\n",
     "        else:\n",
     "            self.weighted = edge.weighted\n",
     "\n",
-    "        if self.weighted:\n",
-    "            self._edges[edge.src].append((edge.dest, edge.weight))\n",
-    "        else:\n",
-    "            self._edges[edge.src].append(edge.dest)\n",
+    "        self._insert_edge(edge.src, edge.dest, edge.weight)\n",
     "\n",
     "    def add_undirected_edge(self, edge):\n",
     "        \"\"\"Treated as two directed edges.\"\"\"\n",
-    "        pass\n",
+    "        self.add_directed_edge(edge)\n",
+    "        # both nodes and weighted now checked\n",
+    "        # using invariant of type Edge\n",
+    "        self._insert_edge(edge.node2, edge.node1, edge.weight)\n",
     "\n",
-    "    def children_of(self, node):\n",
-    "        pass\n",
+    "    def children_of(self, node) -> list:\n",
+    "        # always returns a copy of the list, not reference to it\n",
+    "        self._check_node(node)\n",
+    "        if self.weighted:\n",
+    "            return [tup[0] for tup in self._edges[node]]\n",
+    "        else:\n",
+    "            return [node for node in self._edges[node]]\n",
     "\n",
-    "    def has_node(self, node):\n",
-    "        pass\n",
+    "    def has_node(self, node) -> bool:\n",
+    "        return node in self._nodes\n",
+    "\n",
+    "    def _check_node(self, node):\n",
+    "        if not self.has_node(node):\n",
+    "            raise ValueError(\"Node not in graph\")\n",
     "\n",
     "    def __str__(self):\n",
-    "        return \"\""
+    "        return \"\"\n",
+    "\n",
+    "\n",
+    "class Graph(Digraph):\n",
+    "    def add_edge(self, edge):\n",
+    "        self.add_undirected_edge(edge)"
    ]
   }
  ],
